More logic to DataService

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Indusoft": "Host=localhost;Database=sandbox;Username=postgres;Password="
   }
 }
