Get operations for all resources

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Indusoft": "Host=localhost;Database=sandbox;Username=postgres;Password="
+    "Indusoft": "Host=localhost;Database=indusoftcr;Username=postgres;Password="
   }
 }
